k8s/IGWN/igwn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: igwn-frontend
  namespace: osg-frontends
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      k8s-app: igwn-frontend
  template:
    metadata:
      labels:
        k8s-app: igwn-frontend
    spec:
      affinity:
        nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
           nodeSelectorTerms:
           - matchExpressions:
             - key: nautilus.io/region
               operator: In
               values:
               - ucsd
           - matchExpressions:
             - key: kubernetes.io/hostname
               operator: NotIn
               values:
               - suncave-16 
      containers:
      - env:
        - name: VO_POOL
          value: "osg-ligo-1.t2.ucsd.edu, condor-osg.ligo.caltech.edu"
        - name: GWMS_FE_VS_REPO_1
          value: https://github.com/opensciencegrid/osg-flock.git
        name: igwn-frontend
        image: glideinwms/gwms-frontend:dev
        ports:
        - containerPort: 80 
        volumeMounts:
        - mountPath: /var/lib/gwms-frontend/web-area
          name: web-storage
        - mountPath: /etc/grid-security/gwms-frontend
          name: proxycerts-secret
          readOnly: true
        - mountPath: /etc/grid-security/voms
          name: vomscerts-secret
          readOnly: true
        - mountPath: /etc/gwms-frontend/proxies.ini
          subPath: proxies.ini
          name: proxies-config
        - mountPath: /etc/gwms-frontend/frontend.xml.base
          subPath: frontend.xml.base
          name: fexml-config
        resources:
          limits:
            cpu: 3
            memory: 10Gi
          requests:
            cpu: 2
            memory: 5Gi
      restartPolicy: Always
      volumes:
        - name: web-storage
          persistentVolumeClaim:
            claimName: igwn-storage
        - name: proxycerts-secret
          secret:
            secretName: igwnproxycerts
            defaultMode: 0600
        - name: fexml-config
          configMap:
             name: igwn-fexml
             items:
             - key: frontend.xml.k8s
               path: frontend.xml.base
        - name:  vomscerts-secret
          secret:
            secretName: osgvomscerts
            defaultMode: 0600
        - name : proxies-config
          configMap:
             defaultMode: 420
             items:
             - key: proxies.ini
               path: proxies.ini
             name: igwn-proxies-config
