k8s/IGWN/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: igwn-service
  namespace: osg-frontends
spec:
  selector:
    k8s-app: igwn-frontend
  type: ClusterIP
  ports:
  - name: web
    port: 80
    targetPort: 80
    protocol: TCP
