k8s/IGWN/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: igwn-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: ""
  namespace: osg-frontends
spec:
  rules:
  - host: igwn-frontend.nautilus.optiputer.net
    http:
      paths:
      - backend:
          serviceName: igwn-service
          servicePort: 80
